bug#41755: add sync point and use it for testing locking of table names during ALTER TABLE RENAME